// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarketplaceAppPage should match a snapshot when has an error 1`] = `
<MarketplaceAppPage>
  <PersistantNotification
    intent="danger"
  >
    <ElPersistantNotification
      className="el-intent-danger"
    >
      <div
        className="el-intent-danger el-persistant-notification"
      >
        <div
          className="el-pn-icon"
          onClick={[Function]}
        >
          <Icon
            icon="infoSolidSystem"
          >
            <ElIcon
              className=""
              style={
                Object {
                  "fontSize": undefined,
                }
              }
            >
              <span
                className="el-icon"
                style={
                  Object {
                    "fontSize": undefined,
                  }
                }
              >
                <Memo()>
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M9.99958 0C4.47746 0 0 4.47746 0 9.99958C0 15.5217 4.47746 20 9.99958 20C15.5217 20 20 15.5217 20 9.99958C20 4.47746 15.5217 0 9.99958 0ZM12.0813 15.498C11.5666 15.7012 11.1568 15.8552 10.8495 15.9619C10.5431 16.0686 10.1867 16.1219 9.78116 16.1219C9.1581 16.1219 8.67302 15.9695 8.32762 15.6656C7.98222 15.3617 7.81037 14.9765 7.81037 14.5084C7.81037 14.3263 7.82307 14.1401 7.84847 13.9505C7.87471 13.7608 7.91619 13.5475 7.97291 13.3079L8.61714 11.0324C8.67386 10.814 8.72296 10.6066 8.7619 10.4135C8.80085 10.2188 8.81947 10.0402 8.81947 9.87767C8.81947 9.58815 8.75937 9.38497 8.64 9.27069C8.51894 9.1564 8.29122 9.10053 7.95175 9.10053C7.78582 9.10053 7.61481 9.12508 7.43958 9.17672C7.26603 9.23005 7.11534 9.27831 6.99175 9.32571L7.1619 8.62476C7.58349 8.45291 7.9873 8.30561 8.37249 8.1837C8.75767 8.06011 9.12169 7.99915 9.46455 7.99915C10.0834 7.99915 10.5608 8.14984 10.8969 8.44783C11.2313 8.74667 11.3998 9.13524 11.3998 9.6127C11.3998 9.71175 11.3879 9.88614 11.3651 10.135C11.3422 10.3848 11.299 10.6125 11.2364 10.8216L10.5956 13.0904C10.5431 13.2724 10.4965 13.4806 10.4542 13.7134C10.4127 13.9462 10.3924 14.124 10.3924 14.2434C10.3924 14.5448 10.4593 14.7505 10.5947 14.8597C10.7285 14.9689 10.963 15.0239 11.2948 15.0239C11.4514 15.0239 11.6267 14.996 11.8248 14.9418C12.0212 14.8876 12.1634 14.8394 12.2531 14.7979L12.0813 15.498ZM11.9678 6.2891C11.669 6.56677 11.3092 6.70561 10.8885 6.70561C10.4686 6.70561 10.1062 6.56677 9.80487 6.2891C9.50519 6.01143 9.35365 5.67365 9.35365 5.27915C9.35365 4.8855 9.50603 4.54688 9.80487 4.26667C10.1062 3.98561 10.4686 3.84593 10.8885 3.84593C11.3092 3.84593 11.6698 3.98561 11.9678 4.26667C12.2667 4.54688 12.4165 4.8855 12.4165 5.27915C12.4165 5.6745 12.2667 6.01143 11.9678 6.2891Z"
                      fill="currentColor"
                    />
                  </svg>
                </Memo()>
              </span>
            </ElIcon>
          </Icon>
        </div>
        <div
          className="el-pn-content"
        >
          Something went wrong fetching the app details. Please refresh this page.
        </div>
      </div>
    </ElPersistantNotification>
  </PersistantNotification>
</MarketplaceAppPage>
`;

exports[`MarketplaceAppPage should match a snapshot when has data 1`] = `
<MarketplaceAppPage>
  <FlexContainer
    isFlexAuto={true}
  >
    <ElFlexContainer
      className="el-flex-auto"
    >
      <div
        className="el-flex-auto el-flex-container"
      >
        <SecondaryNavContainer>
          <ElSecondaryNavContainer>
            <aside
              className="el-secondary-nav-container"
            >
              <Title>
                <ElTitle
                  className=""
                >
                  <h1
                    className="el-title"
                  >
                    Apps
                  </h1>
                </ElTitle>
              </Title>
              <Icon
                className="el-mb5"
                icon="appInfographicAlt"
                iconSize="large"
              >
                <ElIcon
                  className="el-mb5 el-icon-size-large"
                  style={
                    Object {
                      "fontSize": undefined,
                    }
                  }
                >
                  <span
                    className="el-mb5 el-icon-size-large el-icon"
                    style={
                      Object {
                        "fontSize": undefined,
                      }
                    }
                  >
                    <Memo()>
                      <svg
                        fill="none"
                        height="1em"
                        viewBox="0 0 40 40"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <rect
                            fill="#0061A8"
                            height="34.1736"
                            width="19.3482"
                            x="19.1089"
                            y="4.56079"
                          />
                          <path
                            d="M32.2112 6.354H28.4706C27.9537 6.354 27.5354 6.7645 27.5354 7.27163C27.5354 7.77876 27.9537 8.18925 28.4706 8.18925H32.2112C32.728 8.18925 33.1464 7.77876 33.1464 7.27163C33.1464 6.7645 32.728 6.354 32.2112 6.354Z"
                            fill="#23A4DE"
                          />
                          <path
                            d="M36.2628 3.29517H21.3002C19.2379 3.29517 17.5596 4.94201 17.5596 6.96566V36.3296C17.5596 38.3533 19.2379 40.0001 21.3002 40.0001H36.2628C38.3251 40.0001 40.0034 38.3533 40.0034 36.3296V6.96566C40.0034 4.94201 38.3251 3.29517 36.2628 3.29517ZM38.1331 36.3296C38.1331 37.3433 37.2959 38.1649 36.2628 38.1649H21.3002C20.2672 38.1649 19.4299 37.3433 19.4299 36.3296V6.96566C19.4299 5.95197 20.2672 5.13041 21.3002 5.13041H36.2628C37.2959 5.13041 38.1331 5.95197 38.1331 6.96566V36.3296Z"
                            fill="#0061A8"
                          />
                          <path
                            d="M28.78 36.9412C29.8129 36.9412 30.6503 36.1196 30.6503 35.106C30.6503 34.0924 29.8129 33.2708 28.78 33.2708C27.747 33.2708 26.9097 34.0924 26.9097 35.106C26.9097 36.1196 27.747 36.9412 28.78 36.9412Z"
                            fill="#23A4DE"
                          />
                          <path
                            d="M25.3509 8.18925C25.8674 8.18925 26.2861 7.77842 26.2861 7.27163C26.2861 6.76484 25.8674 6.354 25.3509 6.354C24.8345 6.354 24.4158 6.76484 24.4158 7.27163C24.4158 7.77842 24.8345 8.18925 25.3509 8.18925Z"
                            fill="#23A4DE"
                          />
                          <path
                            d="M31.0863 5.93993C30.7448 3.82843 28.8502 2.2078 26.5703 2.2078C25.7126 2.2078 24.8884 2.43707 24.1735 2.8647C23.086 1.09885 21.1281 0 18.9531 0C15.593 0 12.8593 2.64117 12.8593 5.88748C12.8593 5.90759 12.8593 5.92844 12.8601 5.94856C10.7006 6.29999 8.99994 8.11898 8.99994 10.3031C8.99994 12.738 11.1008 14.7187 13.621 14.7187H30.3788C32.8991 14.7187 34.9999 12.738 34.9999 10.3031C34.9999 8.10034 33.2718 6.26982 31.0863 5.93993Z"
                            fill="white"
                          />
                          <path
                            d="M17.9036 19.7988L32.8017 19.7988C33.5648 19.7988 34.183 20.4054 34.183 21.1542L34.183 29.9974C34.183 30.7463 33.5648 31.3528 32.8017 31.3528L17.9036 31.3528L17.9036 19.7988Z"
                            fill="#23A4DE"
                          />
                          <path
                            d="M19.285 13.381L19.285 37.7687C19.285 38.8862 17.9838 39.524 17.0736 38.8517L0.551091 26.6585C-0.183763 26.1163 -0.183763 25.0341 0.551091 24.4919L17.0736 12.298C17.9838 11.6258 19.285 12.2635 19.285 13.381Z"
                            fill="#7BC9EB"
                          />
                        </g>
                        <defs>
                          <clipPath
                            id="clip0"
                          >
                            <rect
                              fill="white"
                              height="1em"
                              width="1em"
                            />
                          </clipPath>
                        </defs>
                      </svg>
                    </Memo()>
                  </span>
                </ElIcon>
              </Icon>
              <Subtitle>
                <ElSubtitle
                  className=""
                >
                  <h2
                    className="el-subtitle"
                  >
                    Marketplace Visibility and Installation Management
                  </h2>
                </ElSubtitle>
              </Subtitle>
              <BodyText
                hasGreyText={true}
              >
                <ElBodyText
                  className="el-has-grey-text"
                >
                  <p
                    className="el-has-grey-text el-body-text"
                  >
                    To set the visibility of app in the Marketplace or manage installations, use the various sections on this page.
                  </p>
                </ElBodyText>
              </BodyText>
              <Button
                className="el-mb5"
                intent="primary"
                onClick={[Function]}
                type="button"
              >
                <ElButton
                  className="el-mb5 el-intent-primary"
                  onClick={[Function]}
                  type="button"
                >
                  <button
                    className="el-mb5 el-intent-primary el-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Back To Apps
                  </button>
                </ElButton>
              </Button>
              <Button
                chevronRight={true}
                className="el-mb5"
                intent="critical"
                onClick={[Function]}
                type="button"
              >
                <ElButton
                  className="el-mb5 el-intent-critical el-button-has-right-chevron"
                  onClick={[Function]}
                  type="button"
                >
                  <button
                    className="el-mb5 el-intent-critical el-button-has-right-chevron el-button"
                    onClick={[Function]}
                    type="button"
                  >
                    View Listing
                  </button>
                </ElButton>
              </Button>
            </aside>
          </ElSecondaryNavContainer>
        </SecondaryNavContainer>
        <PageContainer
          className="el-hfull"
        >
          <ElPageContainer
            className="el-hfull"
          >
            <section
              className="el-hfull el-page-container"
            >
              <Title>
                <ElTitle
                  className=""
                >
                  <h1
                    className="el-title"
                  >
                    SOME_NAME
                     - 
                  </h1>
                </ElTitle>
              </Title>
              <AppPricingPermissionsSection
                app={Object {}}
                desktopIntegrationTypes={Array []}
                isDesktop={false}
              >
                <Subtitle>
                  <ElSubtitle
                    className=""
                  >
                    <h2
                      className="el-subtitle"
                    >
                      Pricing Information
                    </h2>
                  </ElSubtitle>
                </Subtitle>
                <div
                  className="el-mb11"
                >
                  <BodyText
                    hasGreyText={true}
                  >
                    <ElBodyText
                      className="el-has-grey-text"
                    >
                      <p
                        className="el-has-grey-text el-body-text"
                      >
                        There may be a cost associated to using this App/Integration. However, this information has not yet been provided by 
                        . Please contact 
                         directly for information about pricing.
                      </p>
                    </ElBodyText>
                  </BodyText>
                </div>
                <Subtitle>
                  <ElSubtitle
                    className=""
                  >
                    <h2
                      className="el-subtitle"
                    >
                      Data Permissions
                    </h2>
                  </ElSubtitle>
                </Subtitle>
                <BodyText
                  hasGreyText={true}
                >
                  <ElBodyText
                    className="el-has-grey-text"
                  >
                    <p
                      className="el-has-grey-text el-body-text"
                    >
                      By installing this app, you are granting the following permissions to your data:
                    </p>
                  </ElBodyText>
                </BodyText>
                0
              </AppPricingPermissionsSection>
              <AppToggleVisibilitySection
                app={Object {}}
                reFetchApp={[MockFunction]}
              >
                <Subtitle>
                  <ElSubtitle
                    className=""
                  >
                    <h2
                      className="el-subtitle"
                    >
                      Application Visibility
                    </h2>
                  </ElSubtitle>
                </Subtitle>
                <BodyText
                  hasGreyText={true}
                >
                  <ElBodyText
                    className="el-has-grey-text"
                  >
                    <p
                      className="el-has-grey-text el-body-text"
                    >
                      By default, all apps will be visible to all offices/users within your organisation. If you wish to hide an app from the Marketplace, please deselect. Hidden apps (apps that have been deselected) will not be visible in the Marketplace to any offices/users inside of your organisation.
                    </p>
                  </ElBodyText>
                </BodyText>
                <ForwardRef
                  checked={true}
                  className="el-mb11"
                  label="Visible"
                  onChange={[Function]}
                  type="checkbox"
                >
                  <ElInputGroup
                    className="el-mb11"
                  >
                    <div
                      className="el-mb11 el-input-group"
                    >
                      <ForwardRef
                        checked={true}
                        id="test-static-id"
                        onChange={[Function]}
                        type="checkbox"
                      >
                        <ElInput
                          checked={true}
                          id="test-static-id"
                          onChange={[Function]}
                          type="checkbox"
                        >
                          <input
                            checked={true}
                            className="el-input"
                            id="test-static-id"
                            onChange={[Function]}
                            type="checkbox"
                          />
                        </ElInput>
                      </ForwardRef>
                      <Label
                        htmlFor="test-static-id"
                      >
                        <ElLabel
                          htmlFor="test-static-id"
                        >
                          <label
                            className="el-label"
                            htmlFor="test-static-id"
                          >
                            Visible
                          </label>
                        </ElLabel>
                      </Label>
                    </div>
                  </ElInputGroup>
                </ForwardRef>
              </AppToggleVisibilitySection>
              <AppInstallationManager
                app={Object {}}
              >
                <AppUninstallationSection
                  clientId="SOME_CLIENT_ID"
                  installations={Object {}}
                  setPerformCompleteUninstall={[Function]}
                  setShowConfirmModal={[Function]}
                >
                  <div
                    className="el-mb11"
                  >
                    <Subtitle>
                      <ElSubtitle
                        className=""
                      >
                        <h2
                          className="el-subtitle"
                        >
                          Current Installations
                        </h2>
                      </ElSubtitle>
                    </Subtitle>
                    <BodyText
                      hasGreyText={true}
                    >
                      <ElBodyText
                        className="el-has-grey-text"
                      >
                        <p
                          className="el-has-grey-text el-body-text"
                        >
                          This app is not currently installed. You can either install for your organisation or specific office groups in the section below.
                        </p>
                      </ElBodyText>
                    </BodyText>
                  </div>
                </AppUninstallationSection>
                <AppInstallationSection
                  appInstallationType=""
                  initialAppInstallationType={null}
                  installations={Object {}}
                  officeGroupsToAdd={Array []}
                  officeGroupsToRemove={Array []}
                  onCheckboxChange={[Function]}
                  setOfficeGroupsToAdd={[Function]}
                  setOfficeGroupsToRemove={[Function]}
                  setShowConfirmModal={[Function]}
                >
                  <Subtitle>
                    <ElSubtitle
                      className=""
                    >
                      <h2
                        className="el-subtitle"
                      >
                        Installation
                      </h2>
                    </ElSubtitle>
                  </Subtitle>
                  <BodyText
                    hasGreyText={true}
                  >
                    <ElBodyText
                      className="el-has-grey-text"
                    >
                      <p
                        className="el-has-grey-text el-body-text"
                      >
                        Please select the type of installation you require for this app:
                      </p>
                    </ElBodyText>
                  </BodyText>
                  <FormLayout>
                    <ElFormLayout>
                      <div
                        className="el-form-layout"
                      >
                        <InputWrap>
                          <ElInputWrap>
                            <div
                              className="el-input-wrap"
                            >
                              <ForwardRef
                                checked={false}
                                className="el-mb5"
                                id="WHOLE_ORG"
                                label="Install for the whole of your organisation"
                                onChange={[Function]}
                                type="checkbox"
                              >
                                <ElInputGroup
                                  className="el-mb5"
                                >
                                  <div
                                    className="el-mb5 el-input-group"
                                  >
                                    <ForwardRef
                                      checked={false}
                                      id="WHOLE_ORG"
                                      onChange={[Function]}
                                      type="checkbox"
                                    >
                                      <ElInput
                                        checked={false}
                                        id="WHOLE_ORG"
                                        onChange={[Function]}
                                        type="checkbox"
                                      >
                                        <input
                                          checked={false}
                                          className="el-input"
                                          id="WHOLE_ORG"
                                          onChange={[Function]}
                                          type="checkbox"
                                        />
                                      </ElInput>
                                    </ForwardRef>
                                    <Label
                                      htmlFor="WHOLE_ORG"
                                    >
                                      <ElLabel
                                        htmlFor="WHOLE_ORG"
                                      >
                                        <label
                                          className="el-label"
                                          htmlFor="WHOLE_ORG"
                                        >
                                          Install for the whole of your organisation
                                        </label>
                                      </ElLabel>
                                    </Label>
                                  </div>
                                </ElInputGroup>
                              </ForwardRef>
                              <BodyText>
                                <ElBodyText
                                  className=""
                                >
                                  <p
                                    className="el-body-text"
                                  >
                                    This will grant the app access to all data for all users and offices across your organisation
                                  </p>
                                </ElBodyText>
                              </BodyText>
                            </div>
                          </ElInputWrap>
                        </InputWrap>
                        <InputWrap>
                          <ElInputWrap>
                            <div
                              className="el-input-wrap"
                            >
                              <ForwardRef
                                checked={false}
                                className="el-mb5"
                                id="SPECIFIC_OFFICE_GROUPS"
                                label="Install for specific office groups"
                                onChange={[Function]}
                                type="checkbox"
                              >
                                <ElInputGroup
                                  className="el-mb5"
                                >
                                  <div
                                    className="el-mb5 el-input-group"
                                  >
                                    <ForwardRef
                                      checked={false}
                                      id="SPECIFIC_OFFICE_GROUPS"
                                      onChange={[Function]}
                                      type="checkbox"
                                    >
                                      <ElInput
                                        checked={false}
                                        id="SPECIFIC_OFFICE_GROUPS"
                                        onChange={[Function]}
                                        type="checkbox"
                                      >
                                        <input
                                          checked={false}
                                          className="el-input"
                                          id="SPECIFIC_OFFICE_GROUPS"
                                          onChange={[Function]}
                                          type="checkbox"
                                        />
                                      </ElInput>
                                    </ForwardRef>
                                    <Label
                                      htmlFor="SPECIFIC_OFFICE_GROUPS"
                                    >
                                      <ElLabel
                                        htmlFor="SPECIFIC_OFFICE_GROUPS"
                                      >
                                        <label
                                          className="el-label"
                                          htmlFor="SPECIFIC_OFFICE_GROUPS"
                                        >
                                          Install for specific office groups
                                        </label>
                                      </ElLabel>
                                    </Label>
                                  </div>
                                </ElInputGroup>
                              </ForwardRef>
                              <BodyText>
                                <ElBodyText
                                  className=""
                                >
                                  <p
                                    className="el-body-text"
                                  >
                                    This will grant the app access to only data for the specific offices inside of each office group
                                  </p>
                                </ElBodyText>
                              </BodyText>
                            </div>
                          </ElInputWrap>
                        </InputWrap>
                        <InputWrapFull>
                          <ElInputWrapFull>
                            <div
                              className="el-input-wrap-full"
                            >
                              <ButtonGroup
                                alignment="right"
                                className="el-mb7"
                              >
                                <ElButtonGroup
                                  className="el-mb7"
                                >
                                  <div
                                    className="el-mb7 el-button-group"
                                  >
                                    <ElButtonGroupInner
                                      className="el-button-group-align-right"
                                    >
                                      <div
                                        className="el-button-group-align-right el-button-group-inner"
                                      >
                                        <Button
                                          chevronRight={true}
                                          disabled={false}
                                          intent="critical"
                                          onClick={[Function]}
                                          size={2}
                                        >
                                          <ElButton
                                            className="el-intent-critical el-button-has-right-chevron el-button-size2"
                                            disabled={false}
                                            onClick={[Function]}
                                          >
                                            <button
                                              className="el-intent-critical el-button-has-right-chevron el-button-size2 el-button"
                                              disabled={false}
                                              onClick={[Function]}
                                            >
                                              Save
                                            </button>
                                          </ElButton>
                                        </Button>
                                      </div>
                                    </ElButtonGroupInner>
                                  </div>
                                </ElButtonGroup>
                              </ButtonGroup>
                            </div>
                          </ElInputWrapFull>
                        </InputWrapFull>
                      </div>
                    </ElFormLayout>
                  </FormLayout>
                </AppInstallationSection>
                <ModalComponent
                  title="undefined App Install"
                >
                  <Portal
                    id="root"
                  >
                    <Portal
                      containerInfo={<div />}
                    >
                      <Modal
                        isOpen={false}
                        onModalClose={[Function]}
                        title="undefined App Install"
                      />
                    </Portal>
                  </Portal>
                </ModalComponent>
              </AppInstallationManager>
            </section>
          </ElPageContainer>
        </PageContainer>
      </div>
    </ElFlexContainer>
  </FlexContainer>
</MarketplaceAppPage>
`;

exports[`MarketplaceAppPage should match a snapshot when loading 1`] = `
<MarketplaceAppPage>
  <FlexContainer
    isFlexAuto={true}
  >
    <ElFlexContainer
      className="el-flex-auto"
    >
      <div
        className="el-flex-auto el-flex-container"
      >
        <SecondaryNavContainer>
          <ElSecondaryNavContainer>
            <aside
              className="el-secondary-nav-container"
            >
              <Title>
                <ElTitle
                  className=""
                >
                  <h1
                    className="el-title"
                  >
                    Apps
                  </h1>
                </ElTitle>
              </Title>
              <Icon
                className="el-mb5"
                icon="appInfographicAlt"
                iconSize="large"
              >
                <ElIcon
                  className="el-mb5 el-icon-size-large"
                  style={
                    Object {
                      "fontSize": undefined,
                    }
                  }
                >
                  <span
                    className="el-mb5 el-icon-size-large el-icon"
                    style={
                      Object {
                        "fontSize": undefined,
                      }
                    }
                  >
                    <Memo()>
                      <svg
                        fill="none"
                        height="1em"
                        viewBox="0 0 40 40"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <rect
                            fill="#0061A8"
                            height="34.1736"
                            width="19.3482"
                            x="19.1089"
                            y="4.56079"
                          />
                          <path
                            d="M32.2112 6.354H28.4706C27.9537 6.354 27.5354 6.7645 27.5354 7.27163C27.5354 7.77876 27.9537 8.18925 28.4706 8.18925H32.2112C32.728 8.18925 33.1464 7.77876 33.1464 7.27163C33.1464 6.7645 32.728 6.354 32.2112 6.354Z"
                            fill="#23A4DE"
                          />
                          <path
                            d="M36.2628 3.29517H21.3002C19.2379 3.29517 17.5596 4.94201 17.5596 6.96566V36.3296C17.5596 38.3533 19.2379 40.0001 21.3002 40.0001H36.2628C38.3251 40.0001 40.0034 38.3533 40.0034 36.3296V6.96566C40.0034 4.94201 38.3251 3.29517 36.2628 3.29517ZM38.1331 36.3296C38.1331 37.3433 37.2959 38.1649 36.2628 38.1649H21.3002C20.2672 38.1649 19.4299 37.3433 19.4299 36.3296V6.96566C19.4299 5.95197 20.2672 5.13041 21.3002 5.13041H36.2628C37.2959 5.13041 38.1331 5.95197 38.1331 6.96566V36.3296Z"
                            fill="#0061A8"
                          />
                          <path
                            d="M28.78 36.9412C29.8129 36.9412 30.6503 36.1196 30.6503 35.106C30.6503 34.0924 29.8129 33.2708 28.78 33.2708C27.747 33.2708 26.9097 34.0924 26.9097 35.106C26.9097 36.1196 27.747 36.9412 28.78 36.9412Z"
                            fill="#23A4DE"
                          />
                          <path
                            d="M25.3509 8.18925C25.8674 8.18925 26.2861 7.77842 26.2861 7.27163C26.2861 6.76484 25.8674 6.354 25.3509 6.354C24.8345 6.354 24.4158 6.76484 24.4158 7.27163C24.4158 7.77842 24.8345 8.18925 25.3509 8.18925Z"
                            fill="#23A4DE"
                          />
                          <path
                            d="M31.0863 5.93993C30.7448 3.82843 28.8502 2.2078 26.5703 2.2078C25.7126 2.2078 24.8884 2.43707 24.1735 2.8647C23.086 1.09885 21.1281 0 18.9531 0C15.593 0 12.8593 2.64117 12.8593 5.88748C12.8593 5.90759 12.8593 5.92844 12.8601 5.94856C10.7006 6.29999 8.99994 8.11898 8.99994 10.3031C8.99994 12.738 11.1008 14.7187 13.621 14.7187H30.3788C32.8991 14.7187 34.9999 12.738 34.9999 10.3031C34.9999 8.10034 33.2718 6.26982 31.0863 5.93993Z"
                            fill="white"
                          />
                          <path
                            d="M17.9036 19.7988L32.8017 19.7988C33.5648 19.7988 34.183 20.4054 34.183 21.1542L34.183 29.9974C34.183 30.7463 33.5648 31.3528 32.8017 31.3528L17.9036 31.3528L17.9036 19.7988Z"
                            fill="#23A4DE"
                          />
                          <path
                            d="M19.285 13.381L19.285 37.7687C19.285 38.8862 17.9838 39.524 17.0736 38.8517L0.551091 26.6585C-0.183763 26.1163 -0.183763 25.0341 0.551091 24.4919L17.0736 12.298C17.9838 11.6258 19.285 12.2635 19.285 13.381Z"
                            fill="#7BC9EB"
                          />
                        </g>
                        <defs>
                          <clipPath
                            id="clip0"
                          >
                            <rect
                              fill="white"
                              height="1em"
                              width="1em"
                            />
                          </clipPath>
                        </defs>
                      </svg>
                    </Memo()>
                  </span>
                </ElIcon>
              </Icon>
              <Subtitle>
                <ElSubtitle
                  className=""
                >
                  <h2
                    className="el-subtitle"
                  >
                    Marketplace Visibility and Installation Management
                  </h2>
                </ElSubtitle>
              </Subtitle>
              <BodyText
                hasGreyText={true}
              >
                <ElBodyText
                  className="el-has-grey-text"
                >
                  <p
                    className="el-has-grey-text el-body-text"
                  >
                    To set the visibility of app in the Marketplace or manage installations, use the various sections on this page.
                  </p>
                </ElBodyText>
              </BodyText>
              <Button
                className="el-mb5"
                intent="primary"
                onClick={[Function]}
                type="button"
              >
                <ElButton
                  className="el-mb5 el-intent-primary"
                  onClick={[Function]}
                  type="button"
                >
                  <button
                    className="el-mb5 el-intent-primary el-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Back To Apps
                  </button>
                </ElButton>
              </Button>
              <Button
                chevronRight={true}
                className="el-mb5"
                intent="critical"
                onClick={[Function]}
                type="button"
              >
                <ElButton
                  className="el-mb5 el-intent-critical el-button-has-right-chevron"
                  onClick={[Function]}
                  type="button"
                >
                  <button
                    className="el-mb5 el-intent-critical el-button-has-right-chevron el-button"
                    onClick={[Function]}
                    type="button"
                  >
                    View Listing
                  </button>
                </ElButton>
              </Button>
            </aside>
          </ElSecondaryNavContainer>
        </SecondaryNavContainer>
        <PageContainer
          className="el-hfull"
        >
          <ElPageContainer
            className="el-hfull"
          >
            <section
              className="el-hfull el-page-container"
            >
              <Loader>
                <ElLoaderContainer
                  className=""
                >
                  <div
                    className="el-loader-container"
                  >
                    <ElLoader>
                      <div
                        className="el-loader"
                      >
                        <ElLoaderMovingBar>
                          <div
                            className="el-loader-moving-bar"
                          />
                        </ElLoaderMovingBar>
                      </div>
                    </ElLoader>
                  </div>
                </ElLoaderContainer>
              </Loader>
            </section>
          </ElPageContainer>
        </PageContainer>
      </div>
    </ElFlexContainer>
  </FlexContainer>
</MarketplaceAppPage>
`;
